--- a/src/tasks/templates/signup.html
+++ b/src/tasks/templates/signup.html
@@ -1,6 +1,27 @@
-<h1>Sign up!</h1>
+{% extends 'index.html' %} {% block content %}
 
-<form action="/signup/" method="POST">
-  {% csrf_token %} {{ user_creation_form.as_p }}
-  <button>Signup</button>
-</form>
+
+<main class="container">
+  <div class="row">
+    <div class="col-md-4 offset-md-4 mt-5">
+      <form action="/signup/" method="POST" class="card card-body">
+        <h1 class="display-4 text-center">Sign up!</h1>
+        {{ error }} {% csrf_token %}
+        <div class="mb-3">
+          <label for="username">Username:</label>
+          <input type="text" name="username" id="username" class="form-control" placeholder="Write your username">
+        </div>
+        <div class="mb-3">
+          <label for="password">Password:</label>
+          <input type="password" name="password1" id="password1" class="form-control" placeholder="Write your password">
+        </div>
+        <div class="mb-3">
+          <label for="password">Confirm your password:</label>
+          <input type="password" name="password2" id="password2" class="form-control" placeholder="Write your password again">
+        </div>
+        <button class="btn btn-dark">Signup</button>
+      </form>
+    </div>
+  </div>
+</main>
+{% endblock %}
